fixed styling 0-key, del-key

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
           <div data-current_operant class="current_operant">0</div>
         </div>
         <div class="command_keys">
-          <button data-clear="clear">AC</button>
-          <button data-delete="delete">DEL</button>
+          <button data-all-clear class="all_clear">AC</button>
+          <button data-delete class="delete">DEL</button>
         </div>
         <div class="operator_keys">
           <button data-operator="/">&divide;</button>
