refactored display, added operant output

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <div class="app">
       <div class="calculator">
         <div class="display">
-          <div data-previous_operant class="previous_operant">0</div>
-          <div data-current_operant class="current_operant">0</div>
+          <div data-previous_operant_output class="previous_operant"></div>
+          <div data-operator_output class="operator"></div>
+          <div data-current_operant_output class="current_operant">0</div>
         </div>
         <div class="command_keys">
           <button data-all-clear class="all_clear">AC</button>
