removed 0, default is null

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="display">
           <div data-previous_operant_output class="previous_operant"></div>
           <div data-operator_output class="operator"></div>
-          <div data-current_operant_output class="current_operant">0</div>
+          <div data-current_operant_output class="current_operant"></div>
         </div>
         <div class="command_keys">
           <button data-all-clear class="all_clear">AC</button>
