--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <button data-operator="*">&times;</button>
           <button data-operator="-">&minus;</button>
           <button data-operator="+">&plus;</button>
-          <button data-operator="=">&equals;</button>
+          <button data-equal="=">&equals;</button>
         </div>
         <div class="number_keys">
           <button data-key="7">7</button>
