refactored data attributes

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="app">
       <div class="calculator">
         <div class="display">
-          <div data-previous_operant_output class="previous_operant"></div>
-          <div data-operator_output class="operator"></div>
-          <div data-current_operant_output class="current_operant"></div>
+          <div data-previous-operant-output class="previous_operant"></div>
+          <div data-operator-output class="operator"></div>
+          <div data-current-operant-output class="current_operant"></div>
         </div>
         <div class="command_keys">
           <button data-all-clear class="all_clear">AC</button>
@@ -40,6 +40,7 @@
           <button data-key="2">2</button>
           <button data-key="3">3</button>
           <button data-key="0">0</button>
+          <button data-key=",">,</button>
         </div>
       </div>
       <footer>
